ThreadManager works and spawns Virtual Threads; PhaseManager onEnd closes executor service; increased game server worker group to 10 threads and relay server handler threads to 10; update xml